Fixed spacing and button positioning in dashboard

--- a/dashboard/dashboard-global-css/dashboard.css
+++ b/dashboard/dashboard-global-css/dashboard.css
@@ -3,25 +3,18 @@
 }
 .navbut{
 	background-color: blue;
-	margin-left: 5px;
+	margin: 7px;
 	transition: all 1s ease 0s;
 }
 .navbut:hover{
 	background-color: #004488;
 }
-
-/*.cpv{
+.cpv{
 	font-size: 40px;
-}*/
-
-.characters-left{
-
 }
-
-.navbut{
- 	margin: 7px;
-}
-
 .characters-left{
 	color: black;
+}
+.control{
+	margin-bottom: -60px;
 }
